--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-scripts": "2.1.5",
+    "rxjs": "^6.4.0",
     "sanctuary": "^0.15.0",
     "styled-components": "^4.1.3"
   },
